@@ -59,6 +59,9 @@ Changes in Version 2.1-0 (2017-08-15)
    o predict.rma() gains 'vcov' argument; when set to TRUE, the variance-
      covariance matrix of the predicted values is also returned
 
+   o vcov.rma() can now also return the variance-covariance matrix of the
+     fitted values (when type="fitted")
+
    o added `$<-` method for 'list.rma' objects
 
    o added more tests (also for parallel operations)
